streamlit_3000.log

Collecting usage statistics. To deactivate, set browser.gatherUsageStats to false.


  You can now view your Streamlit app in your browser.

  URL: http://0.0.0.0:3000

2025-09-10 02:09:18.484 Uncaught app execution
Traceback (most recent call last):
  File "/home/ubuntu/.local/lib/python3.13/site-packages/streamlit/runtime/scriptrunner/exec_code.py", line 128, in exec_func_with_error_handling
    result = func()
  File "/home/ubuntu/.local/lib/python3.13/site-packages/streamlit/runtime/scriptrunner/script_runner.py", line 669, in code_to_exec
    exec(code, module.__dict__)  # noqa: S102
    ~~~~^^^^^^^^^^^^^^^^^^^^^^^
  File "/workspace/app.py", line 10, in <module>
    st.set_page_config(
    ~~~~~~~~~~~~~~~~~~^
    	title="Smart Agri-Advisor",
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
    	page_icon="🌱",
     ^^^^^^^^^^^^^^^
    	layout="centered",
     ^^^^^^^^^^^^^^^^^^
    )
    ^
  File "/home/ubuntu/.local/lib/python3.13/site-packages/streamlit/runtime/metrics_util.py", line 443, in wrapped_func
    result = non_optional_func(*args, **kwargs)
TypeError: set_page_config() got an unexpected keyword argument 'title'
2025-09-10 02:11:29.983 Uncaught app execution
Traceback (most recent call last):
  File "/home/ubuntu/.local/lib/python3.13/site-packages/streamlit/runtime/scriptrunner/exec_code.py", line 128, in exec_func_with_error_handling
    result = func()
  File "/home/ubuntu/.local/lib/python3.13/site-packages/streamlit/runtime/scriptrunner/script_runner.py", line 669, in code_to_exec
    exec(code, module.__dict__)  # noqa: S102
    ~~~~^^^^^^^^^^^^^^^^^^^^^^^
  File "/workspace/app.py", line 161, in <module>
    chart = build_chart(past_df, forecast_df)
  File "/workspace/app.py", line 142, in build_chart
    past_line = base.mark_line(color="#2e7d32", strokeWidth=3).encode(detail=alt.value("Past")).transform_calculate(Date="datum.Date", Price="datum.Price").transform_filter(alt.datum.Status == "Past").properties()
                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/.local/lib/python3.13/site-packages/altair/vegalite/v5/schema/channels.py", line 21788, in encode
    kwargs = _infer_encoding_types(args, kwargs)
  File "/home/ubuntu/.local/lib/python3.13/site-packages/altair/utils/core.py", line 981, in infer_encoding_types
    return cache.infer_encoding_types(kwargs)
           ~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^
  File "/home/ubuntu/.local/lib/python3.13/site-packages/altair/utils/core.py", line 896, in infer_encoding_types
    encoding: self._wrap_in_channel(obj, encoding)
              ~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "/home/ubuntu/.local/lib/python3.13/site-packages/altair/utils/core.py", line 882, in _wrap_in_channel
    tp = channel["value" if "value" in obj else "field"]
         ~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
KeyError: 'value'
2025-09-10 02:13:18.230 Script compilation error
Traceback (most recent call last):
  File "/home/ubuntu/.local/lib/python3.13/site-packages/streamlit/runtime/scriptrunner/script_runner.py", line 571, in _run_script
    code = self._script_cache.get_bytecode(script_path)
  File "/home/ubuntu/.local/lib/python3.13/site-packages/streamlit/runtime/scriptrunner/script_cache.py", line 72, in get_bytecode
    filebody = magic.add_magic(filebody, script_path)
  File "/home/ubuntu/.local/lib/python3.13/site-packages/streamlit/runtime/scriptrunner/magic.py", line 45, in add_magic
    tree = ast.parse(code, script_path, "exec")
  File "/usr/lib/python3.13/ast.py", line 54, in parse
    return compile(source, filename, mode, flags,
                   _feature_version=feature_version, optimize=optimize)
  File "/workspace/app.py", line 1
    THIS SHOULD BE A LINTER ERRORimport hashlib
         ^^^^^^
SyntaxError: invalid syntax
2025-09-10 02:13:18.231 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.
2025-09-10 02:13:30.167 Script compilation error
Traceback (most recent call last):
  File "/home/ubuntu/.local/lib/python3.13/site-packages/streamlit/runtime/scriptrunner/script_runner.py", line 571, in _run_script
    code = self._script_cache.get_bytecode(script_path)
  File "/home/ubuntu/.local/lib/python3.13/site-packages/streamlit/runtime/scriptrunner/script_cache.py", line 72, in get_bytecode
    filebody = magic.add_magic(filebody, script_path)
  File "/home/ubuntu/.local/lib/python3.13/site-packages/streamlit/runtime/scriptrunner/magic.py", line 45, in add_magic
    tree = ast.parse(code, script_path, "exec")
  File "/usr/lib/python3.13/ast.py", line 54, in parse
    return compile(source, filename, mode, flags,
                   _feature_version=feature_version, optimize=optimize)
  File "/workspace/app.py", line 1
    THIS SHOULD BE A LINTER ERRORimport hashlib
         ^^^^^^
SyntaxError: invalid syntax
2025-09-10 02:13:30.168 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.
2025-09-10 02:13:37.542 Script compilation error
Traceback (most recent call last):
  File "/home/ubuntu/.local/lib/python3.13/site-packages/streamlit/runtime/scriptrunner/script_runner.py", line 571, in _run_script
    code = self._script_cache.get_bytecode(script_path)
  File "/home/ubuntu/.local/lib/python3.13/site-packages/streamlit/runtime/scriptrunner/script_cache.py", line 72, in get_bytecode
    filebody = magic.add_magic(filebody, script_path)
  File "/home/ubuntu/.local/lib/python3.13/site-packages/streamlit/runtime/scriptrunner/magic.py", line 45, in add_magic
    tree = ast.parse(code, script_path, "exec")
  File "/usr/lib/python3.13/ast.py", line 54, in parse
    return compile(source, filename, mode, flags,
                   _feature_version=feature_version, optimize=optimize)
  File "/workspace/app.py", line 1
    THIS SHOULD BE A LINTER ERRORimport hashlib
         ^^^^^^
SyntaxError: invalid syntax
2025-09-10 02:13:37.543 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.
2025-09-10 02:21:58.929 Script compilation error
Traceback (most recent call last):
  File "/home/ubuntu/.local/lib/python3.13/site-packages/streamlit/runtime/scriptrunner/script_runner.py", line 571, in _run_script
    code = self._script_cache.get_bytecode(script_path)
  File "/home/ubuntu/.local/lib/python3.13/site-packages/streamlit/runtime/scriptrunner/script_cache.py", line 72, in get_bytecode
    filebody = magic.add_magic(filebody, script_path)
  File "/home/ubuntu/.local/lib/python3.13/site-packages/streamlit/runtime/scriptrunner/magic.py", line 45, in add_magic
    tree = ast.parse(code, script_path, "exec")
  File "/usr/lib/python3.13/ast.py", line 54, in parse
    return compile(source, filename, mode, flags,
                   _feature_version=feature_version, optimize=optimize)
  File "/workspace/app.py", line 260
    		f'This is a guide. Always check local market news.'</div>',
    		                                                         ^
SyntaxError: unterminated string literal (detected at line 260)
2025-09-10 02:21:58.931 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.
2025-09-10 02:22:02.264 Script compilation error
Traceback (most recent call last):
  File "/home/ubuntu/.local/lib/python3.13/site-packages/streamlit/runtime/scriptrunner/script_runner.py", line 571, in _run_script
    code = self._script_cache.get_bytecode(script_path)
  File "/home/ubuntu/.local/lib/python3.13/site-packages/streamlit/runtime/scriptrunner/script_cache.py", line 72, in get_bytecode
    filebody = magic.add_magic(filebody, script_path)
  File "/home/ubuntu/.local/lib/python3.13/site-packages/streamlit/runtime/scriptrunner/magic.py", line 45, in add_magic
    tree = ast.parse(code, script_path, "exec")
  File "/usr/lib/python3.13/ast.py", line 54, in parse
    return compile(source, filename, mode, flags,
                   _feature_version=feature_version, optimize=optimize)
  File "/workspace/app.py", line 260
    		f'This is a guide. Always check local market news.'</div>',
    		                                                         ^
SyntaxError: unterminated string literal (detected at line 260)
2025-09-10 02:22:02.265 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.
2025-09-10 02:22:22.279 Script compilation error
Traceback (most recent call last):
  File "/home/ubuntu/.local/lib/python3.13/site-packages/streamlit/runtime/scriptrunner/script_runner.py", line 571, in _run_script
    code = self._script_cache.get_bytecode(script_path)
  File "/home/ubuntu/.local/lib/python3.13/site-packages/streamlit/runtime/scriptrunner/script_cache.py", line 72, in get_bytecode
    filebody = magic.add_magic(filebody, script_path)
  File "/home/ubuntu/.local/lib/python3.13/site-packages/streamlit/runtime/scriptrunner/magic.py", line 45, in add_magic
    tree = ast.parse(code, script_path, "exec")
  File "/usr/lib/python3.13/ast.py", line 54, in parse
    return compile(source, filename, mode, flags,
                   _feature_version=feature_version, optimize=optimize)
  File "/workspace/app.py", line 260
    		f'This is a guide. Always check local market news.'</div>',
    		                                                         ^
SyntaxError: unterminated string literal (detected at line 260)
2025-09-10 02:22:22.280 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.
